# cram

./: Cargo.toml  compressed.txt  readme.md  sample.txt
src/: compressor.rs  main.rs
