[package]
name = "cram"
version = "0.1.0"
authors = ["Matt Cowan"]
edition = "2021"
repository = "https://github.com/mpcowan/cram"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
brotli = "3.3.4"
clap = { version = "3.1.8", features = ["derive"] }
indicatif = "0.16.2"
libflate = "1.2.0"
lz4_flex = "0.9.5"
snap = "1.0.5"
zstd = "0.11.2+zstd.1.5.2"
